# ImageCNN

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
configs/: cnn.config
docs/html/: _r_e_a_d_m_e_8md.html  activations_8hpp.html  activations_8hpp.js  activations_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classimagenn_1_1_activation_base-members.html  classimagenn_1_1_activation_base.html  classimagenn_1_1_activation_base.js  classimagenn_1_1_activation_relu-members.html  classimagenn_1_1_activation_relu.html  classimagenn_1_1_activation_relu.js  classimagenn_1_1_activation_sigmoid-members.html  classimagenn_1_1_activation_sigmoid.html  classimagenn_1_1_activation_sigmoid.js  classimagenn_1_1_activation_softmax-members.html  classimagenn_1_1_activation_softmax.html  classimagenn_1_1_activation_softmax.js  classimagenn_1_1_activation_transparent-members.html  classimagenn_1_1_activation_transparent.html  classimagenn_1_1_activation_transparent.js  classimagenn_1_1_argument_error-members.html  classimagenn_1_1_argument_error.html  classimagenn_1_1_argument_error.js  classimagenn_1_1_bias_neuron-members.html  classimagenn_1_1_bias_neuron.html  classimagenn_1_1_bias_neuron.js  classimagenn_1_1_conv_layer-members.html  classimagenn_1_1_conv_layer.html  classimagenn_1_1_conv_layer.js  classimagenn_1_1_epoch_error-members.html  classimagenn_1_1_epoch_error.html  classimagenn_1_1_epoch_error.js  classimagenn_1_1_flatten_layer-members.html  classimagenn_1_1_flatten_layer.html  classimagenn_1_1_flatten_layer.js  classimagenn_1_1_incorrect_command-members.html  classimagenn_1_1_incorrect_command.html  classimagenn_1_1_incorrect_command.js  (+122 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_1b.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+55 more)
include/imagenn/: activations.hpp  config.hpp  dataset.hpp  exceptions.hpp  layer.hpp  link.hpp  model.hpp  model_io.hpp  network.hpp  neuron.hpp  plot.hpp  rng.hpp  spatial.hpp  tensor.hpp  version.hpp
models/: cnn.config  cnn.nn  cnn.txt
src/: activations.cpp  config.cpp  dataset.cpp  layer.cpp  link.cpp  main.cpp  model.cpp  model_io.cpp  network.cpp  neuron.cpp  plot.cpp  rng.cpp  spatial.cpp  version.cpp
tests/: test_main.cpp
